# cache_lab

./: CMakeLists.txt  README.md  skeleton.md  todo.md
Include/cachelab/: common.hpp  factory.hpp  icache.hpp  metrics.hpp  workload.hpp
Include/cachelab/policies/: lecar.hpp  lfu.hpp  lru.hpp
Include/cahelab/: factory.hpp  icache.hpp  metrics.hpp  workload.hpp
Include/cahelab/policies/: lecar.hpp  lfu.hpp  lru.hpp
bench/: bench_main.cpp
python/: plot_results.py
results/: results.csv
src/: bench_main.cpp  factory.cpp  workload.cpp
src/policies/: lecar.cpp  lfu.cpp  lru.cpp
tests/: CMakeLists.txt  cache_tests.cpp
